# rinha-backend-v2-rust

./: .env  .gitignore  Cargo.toml  Dockerfile  TODO  docker-compose.yml  test.sh
.sqlx/: query-02810c6945c1166aa1a5919f299d948153b706feba8f1c66271f17ae59d56086.json  query-413c8d99af4b3e1f06310c5282c71903dc7a54f7566b563d5b6326d8899246cc.json  query-7b6359cae4d6b25bdf95d074f3911aa05133655fd0fd0e6f05ad2ec0994f09f2.json  query-8dee6c47508914b3a7dfb28351ab778e9d4b3522582e0c329c9f1647ee20bd57.json  query-90749322342d0884663e75dce6959e90b0e054bd586aea35a039c2a1b28b8083.json
src/: extrato.rs  main.rs  structs.rs  transacao.rs
